<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.RecordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/record_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/record_date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/record_toolbar"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/record_date"
        android:textSize="20sp" />

    <Button
        android:id="@+id/record_date_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/record_toolbar"
        android:layout_toEndOf="@+id/record_date"
        android:padding="5dp"
        android:text="@string/record_date_btn"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/record_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/record_date"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/record_time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/record_time_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/record_date_btn"
        android:layout_toEndOf="@+id/record_time"
        android:padding="5dp"
        android:text="@string/record_time_btn"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/record_exer"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/record_time"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/record_exer"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/record_exer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_time_btn"
        android:layout_toEndOf="@+id/record_exer"
        android:hint="@string/record_exer_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="50dp"
        android:textColorHint="@color/edit_hint" />

    <TextView
        android:id="@+id/record_final_write"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_below="@+id/record_exer"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="@string/record_final_write"
        android:textSize="20sp" />

    <Button
        android:id="@+id/record_write_btn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_final_write"
        android:layout_centerInParent="true"
        android:text="@string/record_write_btn" />
</RelativeLayout>